--- a/saryarka-zharyk-group/index.html
+++ b/saryarka-zharyk-group/index.html
@@ -157,7 +157,7 @@
         <p>ИП "Msoft"</p>
         <p>Телефон: +77757792533</p>
         <p>E-mail: murat.mashrapov96@gmail.com</p>
-        <p>Генеральный директор: Машрапов М.М.</p>
+        <p>Генеральный директор: Машрапов Мурат</p>
     </div>
 
     <div class="text-center mt-4">
